2016-11-23  Larus  <larus@Jim-Macbook-Air>

        * CPU/version.h
        Version 9.1.18

        * Documentation/H_P_AppendixA/HHP_AppA.html:
        Fix register usage for syscalls in Table 9.1.

2016-02-27  Larus  <larus@Jim-Macbook-Air>

        *  QtSpim/menu.cpp:
        Unnecessary refresh of register display.

        * QtSpim/spimview.h, regwin.cpp:
        Did not highlight changes to double precision registers correctly.

2015-12-29  Larus  <larus@Jim-Macbook-Air>

        * CPU/version.h (SPIM_VERSION):
        Version 9.1.17

        * summary.rtf:
        Update installation instructions for latest OS X.

        * QtSpim/QtSpim.pro, menu.cpp [https://sourceforge.net/p/spimsimulator/bugs/71/]:
        Fix creation of qtspim.qhc file to eliminate embedded paths.

        *  menu.cpp, spimview.cpp, spimview.h:
        Highlight spim notice with color.

2015-12-28  Larus  <larus@ubuntu>

    * bin/release-debian [https://sourceforge.net/p/spimsimulator/support-requests/9/]:
    Forgot sqldriver on Linux.


2015-12-28  Larus  <larus@Jim-Macbook-Air>

        * CPU/scanner.l [https://sourceforge.net/p/spimsimulator/bugs/66/]:
        Improvement to previous fix for flex version detection.

2015-12-21  Larus  <larus@Jim-Macbook-Air>

        * QtSpim/state.cpp (writeSettings):
        Added check box for spim quiet mode.

2015-09-17    <larus@IC-LMC-ICDO-01>

        * QtSpim/regwin.cpp, QtSpim/datawin.cpp [https://sourceforge.net/p/spimsimulator/bugs/60/]
        Fix of bug 60 did not work on Windows because of difference in
        treatment of hex literals from Mac.

2015-08-27  Larus  <larus@Jim-Macbook-Air>

        * README, README.rtf;
        Update build instructions further.

2015-08-25  Larus  <larus@ubuntu>

        * CPU/version.h (SPIM_VERSION):
        Version 9.1.16

        * README, README.rtf:
        Update build instructions.

        * QtSpim/spimview.cpp (initialize_world):